poetry.css
body{
	text-align: center;
	font-family: 'Garamond', serif;
	line-height: 1.3;
	padding-top: 30px;
	background-color: #F5F5DC;
	color: #333;
	
	background-image: url('/poetry-staging/flower.png');
	background-size: cover;
	background-repeat: no-repeat;
	background-attachment: fixed;
	
}

h1{
	text-align: center;
	font-family: 'Garamond', serif;
	line-height: 1;
	padding-top: 30px;
	font-size: 3rem;
	color: #333;
}

p{
	font-size: 1.2rem;
	text-align: center;
	line-height: 1;
	margin-bottom: 30px;
	margin-top: 10px;
	/*white-space: pre-line;*/
}	

@media (max-width: 600px){
	h1{
		font-size: 1.2rem;
		padding:15%;
	}

	p{
		font-size: 0.75rem;
		line-height: 1.4;
		padding:0 5%;
	}
}

